--- a/classifier/templates/classifier/home.html
+++ b/classifier/templates/classifier/home.html
@@ -7,11 +7,13 @@
 </head>
 
 <body>
-    <h1>Garage AI</h1>
+    <h1>RWP-AI</h1>
     <ul>
         <li><a href="{% url 'train_page' %}">Mulai Training</a></li>
         <li><a href="{% url 'upload_page' %}">Upload Gambar untuk Prediksi Kerusakan Bodi Mobil</a></li>
         <li><a href="{% url 'kfold_page' %}">Kflold Cross Validation Kerusakan Bodi Mobil</a></li>
+        <li><a href="{% url 'kfold_page' %}">Summarization Video/Docx/PDF</a></li>
+        <li><a href="{% url 'kfold_page' %}">Convert Image to Text</a></li>
     </ul>
 </body>
 
